--- a/src/components/Inventories/Inventories.css
+++ b/src/components/Inventories/Inventories.css
@@ -20,3 +20,10 @@
     margin-bottom: 30px;
     text-align: center;
 }
+
+@media screen and (max-width:767px) {
+    .inventories{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+    }
+}
