--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -7,4 +7,14 @@
 
 .about img{
     border-radius: 10px;
+    width: 100%;
+}
+
+@media screen and (max-width:767px) {
+    .about{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        width: 100%;
+        margin: 30px 0px;
+    }
 }
