--- a/src/components/InventoryDetails/inventoryDetails.css
+++ b/src/components/InventoryDetails/inventoryDetails.css
@@ -16,3 +16,11 @@
     border-radius: 5px;
 
 }
+
+@media screen and (max-width:767px) {
+   .details-container{
+       display: grid;
+       grid-template-columns: repeat(1,1fr);
+       margin: 0px;
+   } 
+}
